--- a/LECTURE18.html
+++ b/LECTURE18.html
@@ -494,7 +494,7 @@ div.tocify {
 <ul>
 <li>All material in Chapters 1-6 of the Gotelli book
 <ul>
-<li>Exponential pop growth ([Gotelli Ch. 1], <a href="LECTURE2.html">lecture</a>, <a href="LAB1.html">lab</a>)</li>
+<li>Exponential pop growth (Gotelli Ch. 1, <a href="LECTURE2.html">lecture</a>, <a href="LAB1.html">lab</a>)</li>
 <li>Density-dependent pop growth (Gotelli Ch. 2, <a href="LECTURE3.html">lecture</a>, <a href="LECTURE4.html">lecture</a>, <a href="LECTURE5.html">lecture</a>, <a href="LAB2.html">lab</a>)</li>
 <li>Age-structured pop growth and matrix population models (Gotelli Ch. 3; <a href="LECTURE6.html">lecture</a>, <a href="LECTURE7.html">lecture</a>, <a href="LAB3.html">lab</a>, <a href="LAB4.html">lab</a> additional suggested reading: <a href="heppell1.pdf">Heppell et al. 1998</a>)</li>
 <li>Metapopulations (Gotelli Ch. 4, <a href="LECTURE13.html">lecture</a>, <a href="LAB6.html">lab</a>; additional suggested reading: <a href="griffin1.pdf">Griffin et al. 2008</a>)</li>
