Get ready for 2021

--- a/schedule.html
+++ b/schedule.html
@@ -23,6 +23,17 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<link href="site_libs/anchor-sections-1.0/anchor-sections.css" rel="stylesheet" />
+<script src="site_libs/anchor-sections-1.0/anchor-sections.js"></script>
+
+<style type="text/css">
+  code{white-space: pre-wrap;}
+  span.smallcaps{font-variant: small-caps;}
+  span.underline{text-decoration: underline;}
+  div.column{display: inline-block; vertical-align: top; width: 50%;}
+  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+  ul.task-list{list-style: none;}
+    </style>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -412,350 +423,295 @@ $(document).ready(function () {
 
 <p>Please check for updates frequently!</p>
 <table>
+<colgroup>
+<col width="4%" />
+<col width="6%" />
+<col width="59%" />
+<col width="29%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Week</th>
 <th align="left">Dates</th>
 <th align="left">Topic</th>
 <th align="left">Readings</th>
-<th align="left">Notes</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td align="left">Week 1</td>
-<td align="left">1/20/2020</td>
-<td align="left">NO CLASS (MLK Day)</td>
-<td align="left"></td>
-<td align="left"></td>
+<td align="left">1/25/2021</td>
+<td align="left">LECTURE: Course overview; Intro to Systems Thinking</td>
+<td align="left">BCTD Chapter 1</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">1/22/2020</td>
-<td align="left">LECTURE: Course overview; Intro to Systems Thinking</td>
-<td align="left">BCTD Chapter 1</td>
-<td align="left"></td>
+<td align="left">1/27/2021</td>
+<td align="left">LECTURE: Intro to Population Ecology; Exponential growth</td>
+<td align="left">Gotelli Chapter 1</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">1/24/2020</td>
+<td align="left">1/29/2021</td>
 <td align="left">LAB 1: Introduction to population modeling in Excel, InsightMaker, and R</td>
-<td align="left"></td>
-<td align="left"></td>
+<td align="left">Gotelli Chapter 1</td>
 </tr>
 <tr class="even">
 <td align="left">Week 2</td>
-<td align="left">1/27/2020</td>
-<td align="left">LECTURE: Intro to Population Ecology; Exponential growth</td>
-<td align="left">Gotelli Chapter 1</td>
+<td align="left">2/1/2021</td>
+<td align="left">LECTURE: Malthus and exponential growth</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">1/29/2020</td>
-<td align="left">LECTURE: Malthus and exponential growth</td>
-<td align="left"></td>
-<td align="left"></td>
+<td align="left">2/3/2021</td>
+<td align="left">LECTURE: Density-dependent growth</td>
+<td align="left">Gotelli Chapter 2</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">1/31/2020</td>
+<td align="left">2/5/2021</td>
 <td align="left">LAB 1 (cont’d)</td>
-<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 3</td>
-<td align="left">2/3/2020</td>
+<td align="left">2/8/2021</td>
 <td align="left">LECTURE: Density-dependent growth</td>
 <td align="left">Gotelli Chapter 2</td>
-<td align="left">Away TWS</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">2/5/2020</td>
-<td align="left">LECTURE: Density-dependent growth</td>
+<td align="left">2/10/2021</td>
+<td align="left">LECTURE: Passenger pigeon/Allee Effect</td>
 <td align="left"></td>
-<td align="left">Away TWS?</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">2/7/2020</td>
+<td align="left">2/12/2021</td>
 <td align="left">LAB 2: Density-dependent populations in InsightMaker; maximum sustainable yield (MSY) and more</td>
 <td align="left">BCTD Chapter 2 (skim)</td>
-<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 4</td>
-<td align="left">2/10/2020</td>
-<td align="left">LECTURE: Passenger pigeon/Allee Effect</td>
-<td align="left"></td>
+<td align="left">2/15/2021</td>
+<td align="left">NO CLASS: President’s Day</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">2/12/2020</td>
+<td align="left">2/17/2021</td>
 <td align="left">LECTURE: Age-structured populations</td>
 <td align="left">Gotelli Chapter 3</td>
-<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">2/14/2020</td>
+<td align="left">2/19/2021</td>
 <td align="left">LAB 3: Age-structured populations in Excel and InsightMaker</td>
-<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 5</td>
-<td align="left">2/17/2020</td>
-<td align="left">LECTURE: Age-structured populations</td>
-<td align="left"></td>
-<td align="left"></td>
+<td align="left">2/22/2021</td>
+<td align="left">LECTURE: Matrix population models</td>
+<td align="left"><a href="heppell1.pdf">Heppell 1998</a></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">2/19/2020</td>
+<td align="left">2/24/2021</td>
 <td align="left">LECTURE: Matrix population models</td>
-<td align="left"><a href="heppell1.pdf">Heppell 1998</a></td>
-<td align="left"></td>
+<td align="left">Gotelli Chapter 3</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">2/21/2020</td>
+<td align="left">2/26/2021</td>
 <td align="left">Work on PVA proposals</td>
 <td align="left"></td>
-<td align="left">Away DTC</td>
 </tr>
 <tr class="even">
 <td align="left">Week 6</td>
-<td align="left">2/24/2020</td>
+<td align="left">3/1/2021</td>
 <td align="left">LECTURE: Matrix population models</td>
 <td align="left">Gotelli Chapter 3</td>
-<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">2/26/2020</td>
-<td align="left">LECTURE: Matrix population models</td>
-<td align="left"></td>
-<td align="left"></td>
+<td align="left">3/3/2021</td>
+<td align="left">LECTURE: Stochasticity and uncertainty</td>
+<td align="left"><a href="Regan_2002.pdf">Regan 2002</a></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">2/28/2020</td>
+<td align="left">3/5/2021</td>
 <td align="left">LAB 4: Matrix population models in R and InsightMaker</td>
-<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 7</td>
-<td align="left">3/2/2020</td>
+<td align="left">3/8/2021</td>
 <td align="left">LECTURE: Stochasticity and uncertainty</td>
-<td align="left"><a href="Regan_2002.pdf">Regan 2002</a></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3/4/2020</td>
-<td align="left">MIDTERM #1</td>
+<td align="left">3/10/2021</td>
+<td align="left">NO CLASS: READING DAY</td>
 <td align="left"></td>
-<td align="left">TWS symposium</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">3/6/2020</td>
-<td align="left">LAB 4 (cont’d) and PVA proposals</td>
-<td align="left"><a href="beissinger1.pdf">Beissinger and Westphal 1998</a></td>
+<td align="left">3/12/2021</td>
+<td align="left">PVA proposals (proposals due)</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 8</td>
-<td align="left">3/9/2020</td>
-<td align="left">LECTURE: Stochasticity and uncertainty (proposals due)</td>
-<td align="left"></td>
+<td align="left">3/15/2021</td>
+<td align="left">MIDTERM #1</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">3/11/2020</td>
+<td align="left">3/17/2021</td>
 <td align="left">LECTURE: Stochasticity and uncertainty</td>
-<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3/13/2020</td>
+<td align="left">3/19/2021</td>
 <td align="left">Work on group PVA projects (proposal meetings)</td>
-<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 9</td>
-<td align="left">3/16/2020</td>
-<td align="left">SPRING BREAK</td>
-<td align="left"></td>
-<td align="left">Away France?</td>
+<td align="left">3/22/2021</td>
+<td align="left">LECTURE: Small population paradigm</td>
+<td align="left"><a href="caughley1.pdf">Caughley 1994</a></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3/18/2020</td>
-<td align="left">"</td>
-<td align="left"></td>
+<td align="left">3/24/2021</td>
+<td align="left">NO CLASS (No Instruction Day)</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">3/20/2020</td>
-<td align="left">"</td>
-<td align="left"></td>
+<td align="left">3/26/2021</td>
+<td align="left">LAB 5: Stochasticity and uncertainty</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 10</td>
-<td align="left">3/23/2020</td>
-<td align="left">LECTURE: Stochasticity and uncertainty</td>
-<td align="left"></td>
-<td align="left"></td>
+<td align="left">3/29/2021</td>
+<td align="left">LECTURE: Declining population paradigm</td>
+<td align="left"><a href="caughley1.pdf">Caughley 1994</a></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">3/25/2020</td>
-<td align="left">LECTURE: Small population paradigm</td>
-<td align="left"><a href="caughley1.pdf">Caughley 1994</a></td>
-<td align="left"></td>
+<td align="left">3/31/2021</td>
+<td align="left">LECTURE: PVA!</td>
+<td align="left"><a href="beissinger1.pdf">Beissinger and Westphal 1998</a></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3/27/2020</td>
-<td align="left">LAB 5: Stochasticity and uncertainty</td>
-<td align="left"></td>
+<td align="left">4/2/2021</td>
+<td align="left">Final projects (PVA models due next week)</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 11</td>
-<td align="left">3/30/2020</td>
-<td align="left">LECTURE: Declining population paradigm</td>
-<td align="left"><a href="caughley1.pdf">Caughley 1994</a></td>
-<td align="left"></td>
+<td align="left">4/5/2021</td>
+<td align="left">LECTURE: Metapopulations</td>
+<td align="left">Gotelli Chapter 4</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">4/1/2020</td>
-<td align="left">LECTURE: PVA!</td>
-<td align="left"></td>
-<td align="left"></td>
+<td align="left">4/7/2021</td>
+<td align="left">LECTURE: Source-sink dynamics</td>
+<td align="left"><a href="griffin1.pdf">Griffin et al</a></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">4/3/2020</td>
-<td align="left">Final projects (PVA models due next week)</td>
-<td align="left"></td>
+<td align="left">4/9/2021</td>
+<td align="left">LAB 6: Metapopulation modeling in InsightMaker (PVA models due)</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 12</td>
-<td align="left">4/6/2020</td>
-<td align="left">LECTURE: Metapopulations</td>
-<td align="left">Gotelli Chapter 4</td>
-<td align="left"></td>
+<td align="left">4/12/2021</td>
+<td align="left">LECTURE: Parameter estimation</td>
+<td align="left"><a href="amstrup1.pdf">Amstrup et al Chapter 1</a></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">4/8/2020</td>
-<td align="left">LECTURE: Source-sink dynamics</td>
-<td align="left"><a href="griffin1.pdf">Griffin et al</a></td>
+<td align="left">4/14/2021</td>
+<td align="left">LECTURE: MIDTERM #2</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">4/10/2020</td>
-<td align="left">LAB 6: Metapopulation modeling in InsightMaker (PVA models due)</td>
-<td align="left"></td>
+<td align="left">4/16/2021</td>
+<td align="left">LAB 7 (optional): Parameter estimation: mark-recapture data</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 13</td>
-<td align="left">4/13/2020</td>
-<td align="left">LECTURE: Parameter estimation</td>
-<td align="left"><a href="amstrup1.pdf">Amstrup et al Chapter 1</a></td>
-<td align="left"></td>
+<td align="left">4/19/2021</td>
+<td align="left">LECTURE: Species interactions: competition</td>
+<td align="left">Gotelli Chapter 5</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">4/15/2020</td>
-<td align="left">LECTURE: MIDTERM #2</td>
-<td align="left"></td>
+<td align="left">4/21/2021</td>
+<td align="left">NO CLASS: READING DAY</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">4/17/2020</td>
-<td align="left">LAB: Parameter estimation: mark-recapture data</td>
-<td align="left"></td>
+<td align="left">4/23/2021</td>
+<td align="left">LAB: STUDENT PRESENTATIONS AND PEER REVIEW</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 14</td>
-<td align="left">4/20/2020</td>
+<td align="left">4/26/2021</td>
 <td align="left">LECTURE: Species interactions: competition</td>
-<td align="left">Gotelli Chapter 5</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">4/22/2020</td>
-<td align="left">LECTURE: Species interactions: competition</td>
-<td align="left"></td>
-<td align="left"></td>
+<td align="left">4/28/2021</td>
+<td align="left">LECTURE: Species interactions: predator-prey (final project: complete drafts due)</td>
+<td align="left">Gotelli Chapter 6</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">4/24/2020</td>
-<td align="left">LAB: STUDENT PRESENTATIONS AND PEER REVIEW</td>
-<td align="left"></td>
+<td align="left">4/30/2021</td>
+<td align="left">LAB: STUDENT PRESENTATIONS</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 15</td>
-<td align="left">4/27/2020</td>
-<td align="left">LECTURE: Species interactions: predator-prey (final project: complete drafts due)</td>
-<td align="left">Gotelli Chapter 6</td>
+<td align="left">5/3/2021</td>
+<td align="left">LECTURE: Final Class Review</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">4/29/2020</td>
-<td align="left">LECTURE: Species interactions: predator-prey</td>
-<td align="left"></td>
+<td align="left">5/5/2021</td>
+<td align="left">NO CLASS: Prep Day</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">5/1/2020</td>
-<td align="left">LAB: STUDENT PRESENTATIONS</td>
-<td align="left"></td>
+<td align="left">5/7/2021</td>
+<td align="left">FINAL EXAM (9:50 to 11:50am)</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 16</td>
-<td align="left">5/4/2020</td>
-<td align="left">LECTURE: final class review</td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left">Week 17</td>
-<td align="left">5/8/2020</td>
-<td align="left">FINAL EXAM (9:50 to 11:50am)</td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left">5/13/2020</td>
+<td align="left">5/12/2021</td>
 <td align="left">FINAL PAPERS DUE (last day of finals)</td>
-<td align="left"></td>
 <td align="left"></td>
 </tr>
 </tbody>
@@ -770,7 +726,7 @@ $(document).ready(function () {
 
 // add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
-  $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
+  $('tr.odd').parent('tbody').parent('table').addClass('table table-condensed');
 }
 $(document).ready(function () {
   bootstrapStylePandocTables();
