--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<link href="site_libs/anchor-sections-1.0/anchor-sections.css" rel="stylesheet" />
+<script src="site_libs/anchor-sections-1.0/anchor-sections.js"></script>
+
+<style type="text/css">
+  code{white-space: pre-wrap;}
+  span.smallcaps{font-variant: small-caps;}
+  span.underline{text-decoration: underline;}
+  div.column{display: inline-block; vertical-align: top; width: 50%;}
+  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+  ul.task-list{list-style: none;}
+    </style>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -487,8 +498,8 @@ div.tocify {
 
 
 <p><strong>Instructor:</strong> Kevin Shoemaker<br />
-<strong>Teaching Assistant</strong> Megan Osterhout (mosterhout3_at_gmail_dot_com)<br />
-<strong>Website</strong>: <a href="http://naes.unr.edu/shoemaker/teaching/NRES-470/index.html">naes.unr.edu/shoemaker/teaching/NRES-470</a><br />
+<strong>Teaching Assistants</strong> Mia Goldman (miagoldman_at_nevada_dot_unr_dot_edu) and Adriana Parra (adrianaparra_at_nevada_dot_unr_dot_edu)<br />
+<strong>Website</strong>: <a href="https://kevintshoemaker.github.io/NRES-470/">https://kevintshoemaker.github.io/NRES-470/</a><br />
 <strong>Phone</strong>: (775)682-7449<br />
 <strong>Email</strong>: kevinshoemaker_at_unr_dot_edu</p>
 <div id="course-meeting-times" class="section level3">
@@ -496,13 +507,13 @@ div.tocify {
 <p><strong>Lecture &amp; Discussion</strong>: M, W at 10am (50 mins) (NOTE: please bring your laptop to class!)<br />
 <strong>Lab</strong>: F at 1pm (2 hrs 45 mins) (bring your laptop power cords- I will provide power strips and extension cords)</p>
 <ul>
-<li>Lectures and Labs will be held in <strong>FA 337</strong></li>
+<li>Lectures and Labs will be online (due to the ongoing pandemic)</li>
 </ul>
 <p><strong>Office hours</strong>:</p>
 <ul>
-<li>Shoemaker: Wednesdays at 11am (1 hour) (FA 220E)<br />
+<li>Shoemaker: Wednesdays at 11am (1 hour) (online)<br />
 </li>
-<li>Osterhout: Tuesdays at 11am (1 hour) (FA 231)</li>
+<li>Goldman: TBD (online)</li>
 </ul>
 </div>
 <div id="texts" class="section level3">
@@ -619,7 +630,33 @@ Grading scale: A (100 to 93), A- (92 to 90), B+ (89 to 87), B (86 to 83), B- (82
 </div>
 <div id="this-is-a-safe-space" class="section level3">
 <h3>This is a safe space</h3>
-<p>The University of Nevada, Reno is committed to providing a safe learning and work environment for all. If you believe you have experienced discrimination, sexual harassment, sexual assault, domestic/dating violence, or stalking, whether on or off campus, or need information related to immigration concerns, please contact the University’s Equal Opportunity &amp; Title IX Office at 775-784-1547. Resources and interim measures are available to assist you. For more information, please visit: <a href="http://www.unr.edu/equal-opportunity-title-ix" class="uri">http://www.unr.edu/equal-opportunity-title-ix</a> .</p>
+<p>The University of Nevada, Reno is committed to providing a safe learning and work environment for all. If you believe you have experienced discrimination, sexual harassment, sexual assault, domestic/dating violence, or stalking, whether on or off campus, or need information related to immigration concerns, please contact the University’s Equal Opportunity &amp; Title IX Office at 775-784-1547. Resources and interim measures are available to assist you. For more information, please visit: <a href="http://www.unr.edu/equal-opportunity-title-ix" class="uri">http://www.unr.edu/equal-opportunity-title-ix</a>.</p>
+</div>
+<div id="statement-on-covid-19-training-policies" class="section level3">
+<h3>Statement on COVID-19 Training Policies</h3>
+<p>Students must complete and follow all guidelines as stated in the Student COVID-19 Training modules, or any other trainings or directives provided by the University.</p>
+</div>
+<div id="statement-on-covid-19-face-coverings" class="section level3">
+<h3>Statement on COVID-19 Face Coverings</h3>
+<p>In response to COVID-19, and in alignment with State of Nevada Governor Executive Orders, Roadmap to Recovery for Nevada plans, Nevada System of Higher Education directives, the University of Nevada President directives, and local, state, and national health official guidelines face coverings are required at all times while on campus, except when alone in a private office. This includes the classroom, laboratory, studio, creative space, or any type of in-person instructional activity, and public spaces.</p>
+<p>A “face covering” is defined as a “covering that fully covers a person’s nose and mouth, including without limitation, cloth face mask, surgical mask, towels, scarves, and bandanas” (State of Nevada Emergency Directive 024).</p>
+<p>Students that cannot wear a face covering due to a medical condition or disability, or who are unable to remove a mask without assistance may seek an accommodation through the Disability Resource Center.</p>
+</div>
+<div id="statement-on-covid-19-social-distancing" class="section level3">
+<h3>Statement on COVID-19 Social Distancing:</h3>
+<p>Face coverings are not a substitute for social distancing. Students shall observe current social distancing guidelines where possible in accordance with the Phase we are in while in the classroom, laboratory, studio, creative space (hereafter referred to as instructional space) setting and in public spaces. Students should avoid congregating around instructional space entrances before or after class sessions. If the instructional space has designated entrance and exit doors students are required to use them. Students should exit the instructional space immediately after the end of instruction to help ensure social distancing and allow for the persons attending the next scheduled class session to enter.</p>
+</div>
+<div id="statement-on-covid-19-disinfecting-your-learning-space" class="section level3">
+<h3>Statement on COVID-19 Disinfecting Your Learning Space</h3>
+<p>Disinfecting supplies are provided for you to disinfect your learning space. You may also use your own disinfecting supplies.</p>
+</div>
+<div id="statement-on-covid-19-covid-19-like-symptoms-and-contact-with-someone-testing-positive-for-covid-19" class="section level3">
+<h3>Statement on COVID-19, COVID-19 Like Symptoms, and Contact with Someone Testing Positive for COVID-19</h3>
+<p>Students must conduct daily health checks in accordance with CDC guidelines. Students testing positive for COVID 19, exhibiting COVID 19 symptoms or who have been in direct contact with someone testing positive for COVID 19 will not be allowed to attend in-person instructional activities and must leave the venue immediately. Students should contact the Student Health Center or their health care provider to receive care and who can provide the latest direction on quarantine and self-isolation. Contact your instructor immediately to make instructional and learning arrangements.</p>
+</div>
+<div id="statement-on-failure-to-comply-with-policy-including-as-outlined-in-this-syllabus-or-directives-of-a-university-employee" class="section level3">
+<h3>Statement on Failure to Comply with Policy (including as outlined in this Syllabus) or Directives of a University Employee</h3>
+<p>In accordance with section 6,502 of the University Administrative Manual, a student may receive academic and disciplinary sanctions for failure to comply with policy, including this syllabus, for failure to comply with the directions of a University Official, for disruptive behavior in the classroom, or any other prohibited action. “Disruptive behavior” is defined in part as behavior, including but not limited to failure to follow course, laboratory or safety rules, or endangering the health of others. A student may be dropped from class at any time for misconduct or disruptive behavior in the classroom upon recommendation of the instructor and with approval of the college dean. A student may also receive disciplinary sanctions through the Office of Student Conduct for misconduct or disruptive behavior, including endangering the health of others, in the classroom. The student shall not receive a refund for course fees or tuition.</p>
 </div>
 
 
@@ -633,7 +670,7 @@ Grading scale: A (100 to 93), A- (92 to 90), B+ (89 to 87), B (86 to 83), B- (82
 
 // add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
-  $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
+  $('tr.odd').parent('tbody').parent('table').addClass('table table-condensed');
 }
 $(document).ready(function () {
   bootstrapStylePandocTables();
@@ -672,7 +709,7 @@ $(document).ready(function ()  {
       theme: "bootstrap3",
       context: '.toc-content',
       hashGenerator: function (text) {
-        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
       },
       ignoreSelector: ".toc-ignore",
       scrollTo: 0
