--- a/index.html
+++ b/index.html
@@ -500,12 +500,11 @@ div.tocify {
 <p><strong>Instructor:</strong> Kevin Shoemaker<br />
 <strong>Teaching Assistants</strong> Mia Goldman (miagoldman_at_nevada_dot_unr_dot_edu) and Adriana Parra (adrianaparra_at_nevada_dot_unr_dot_edu)<br />
 <strong>Website</strong>: <a href="https://kevintshoemaker.github.io/NRES-470/">https://kevintshoemaker.github.io/NRES-470/</a><br />
-<strong>Phone</strong>: (775)682-7449<br />
 <strong>Email</strong>: kevinshoemaker_at_unr_dot_edu</p>
 <div id="course-meeting-times" class="section level3">
 <h3>Course Meeting Times</h3>
-<p><strong>Lecture &amp; Discussion</strong>: M, W at 10am (50 mins) (NOTE: please bring your laptop to class!)<br />
-<strong>Lab</strong>: F at 1pm (2 hrs 45 mins) (bring your laptop power cords- I will provide power strips and extension cords)</p>
+<p><strong>Lecture &amp; Discussion</strong>: M, W at 10am (50 mins)<br />
+<strong>Lab</strong>: F at 1pm (2 hrs 45 mins)</p>
 <ul>
 <li>Lectures and Labs will be online (due to the ongoing pandemic)</li>
 </ul>
@@ -532,8 +531,6 @@ div.tocify {
 <li><a href="https://insightmaker.com/">InsightMaker- free web-based systems modeling tool</a>(no installation needed)<br />
 </li>
 <li><a href="https://cran.r-project.org/">R- free statistical programming language</a><br />
-</li>
-<li><a href="http://warnercnr.colostate.edu/~gwhite/mark/mark.htm">Program MARK</a><br />
 </li>
 <li>MS Excel (hopefully you already have this or equivalent spreadsheet software on your laptop!)</li>
 </ul>
@@ -581,7 +578,7 @@ Grading scale: A (100 to 93), A- (92 to 90), B+ (89 to 87), B (86 to 83), B- (82
 </div>
 <div id="exams" class="section level3">
 <h3>Exams:</h3>
-<p>There will be two midterm exams and a comprehensive final exam. These will consist of multiple-choice, short-answer questions, and essay questions requiring synthesis of ideas and critical thinking. The midterm and final exams will be cumulative, and based on all information presented up through the week prior to the exam.</p>
+<p>There will be two midterm exams and a comprehensive (cumulative) final exam. These will consist of multiple-choice, short-answer questions, and essay questions requiring synthesis of ideas and critical thinking. The midterm and final exams will be cumulative, and based on all information presented up through the week prior to the exam.</p>
 </div>
 <div id="lectures" class="section level3">
 <h3>Lectures</h3>
@@ -593,7 +590,7 @@ Grading scale: A (100 to 93), A- (92 to 90), B+ (89 to 87), B (86 to 83), B- (82
 </div>
 <div id="final-group-project" class="section level3">
 <h3>Final group project</h3>
-<p>Students will work in groups of 3-4 to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). Grading will be based on finished products (written and oral presentations) as well as participation and peer evaluations.</p>
+<p>Students will work in groups of ~4 to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). Grading will be based on finished products (written and oral presentations) as well as participation and peer evaluations.</p>
 </div>
 <div id="graduate-credit-for-students-enrolled-in-nres-670" class="section level3">
 <h3>Graduate credit (for students enrolled in NRES 670)</h3>
@@ -607,8 +604,8 @@ Grading scale: A (100 to 93), A- (92 to 90), B+ (89 to 87), B (86 to 83), B- (82
 <h3>Top Hat</h3>
 <p>We will be using the <a href="www.tophat.com">Top Hat</a> (<a href="www.tophat.com">www.tophat.com</a>) classroom response system in class. You will be able to submit answers to in-class questions using Apple or Android smartphones and tablets, laptops, or through text message.</p>
 <p>You can visit the Top Hat Overview (<a href="https://success.tophat.com/s/article/Student-Top-Hat-Overview-and-Getting-Started-Guide" class="uri">https://success.tophat.com/s/article/Student-Top-Hat-Overview-and-Getting-Started-Guide</a>) within the Top Hat Success Center which outlines how you will register for a Top Hat account, as well as providing a brief overview to get you up and running on the system.</p>
-<p>An invitation will be sent to you by email, but if don’t receive this email, you can register by simply visiting our course website: <a href="https://app.tophat.com/e/992461">https://app.tophat.com/e/992461</a></p>
-<p>Note: our Course Join Code is 992461</p>
+<p>An invitation will be sent to you by email, but if don’t receive this email, you can register by simply visiting our course website: <a href="https://app.tophat.com/e/648264">https://app.tophat.com/e/648264</a></p>
+<p>Note: our Course Join Code is 648264</p>
 <p>Top Hat may require a paid subscription, and a full breakdown of all subscription options available can be found here: <a href="www.tophat.com/pricing">www.tophat.com/pricing</a>.</p>
 <p>Should you require assistance with Top Hat at any time, due to the fact that they require specific user information to troubleshoot these issues, please contact their Support Team directly by way of email (<a href="support@tophat.com">support@tophat.com</a>), the in app support button, or by calling 1-888-663-5491.</p>
 </div>
