--- a/LAB1.html
+++ b/LAB1.html
@@ -550,7 +550,7 @@ div.tocify {
 <p><span class="math inline">\(N_{t+1}=N_t + b_d \cdot N_t - d_d \cdot N_t \qquad \text{(Eq. 12)}\)</span></p>
 <p>I am using the <em>d</em> subscript to indicate that the per-capita birth and death rates now represent <strong>discrete growth</strong> (these rates only apply once per time step and are not compounded continuously)</p>
 <p>Here are some expressions to illustrate the difference between discrete and continuous rates:</p>
-<p><span class="math inline">\(b\)</span>: “Babies enter into the population at a rate of 0.9 per adult female per year, but the pool of babies is distributed evenly throughout the year”<br />
+<p><span class="math inline">\(b\)</span>: “Babies enter into the population at a rate of 0.9 per adult female per year, but babies enter enter the population continuously throughout the year”<br />
 <span class="math inline">\(b_d\)</span>: “Babies enter into the population at a rate of 0.9 per adult female per year, but the pool of babies enters the population simultaneously on April 1 each year”<br />
 <span class="math inline">\(d\)</span>: “Approximately 23% of the population dies each year, but the deaths occur evenly throughout the year”<br />
 <span class="math inline">\(d_d\)</span>: “Approximately 23% of the population dies each year, but all the deaths are assumed to occur on Jan 1 of each year”<br />
@@ -718,6 +718,7 @@ N                         # Now print the contents of the object &quot;N&quot;.<
 <li><em>Short answer (1b.)</em></li>
 <li><em>Short answer (1c.)</em></li>
 <li><em>Short answer (1d.)</em></li>
+<li><em>Submit Excel file (1e.)</em></li>
 </ul></li>
 <li><strong>Exercise 2</strong>
 <ul>
