--- a/LAB3.html
+++ b/LAB3.html
@@ -638,7 +638,7 @@ div.tocify {
 <ul>
 <li>Please type your responses into one Word document and submit <em>using Top Hat</em>!</li>
 </ul>
-<p><strong><em>Due Feb. 28 at midnight.</em></strong></p>
+<p><strong><em>Due March 5 at 11:55pm.</em></strong></p>
 <ul>
 <li>Word document with short answers
 <ul>
