--- a/LAB2.html
+++ b/LAB2.html
@@ -635,7 +635,7 @@ legend(&quot;topleft&quot;,col=c(&quot;green&quot;,&quot;red&quot;),lty=c(1,1),l
 <p>Your lab answers and pertinent figures, tables and InsightMaker links (make sure they are public!) should be submitted in the Lab 2 quiz in Top Hat.</p>
 <p><strong><em>Due Feb. 14 at midnight</em></strong></p>
 <ul>
-<li>Word document with short answers
+<li>Top Hat short answers
 <ul>
 <li><strong>Exercise 1</strong>
 <ul>
