--- a/LAB3.html
+++ b/LAB3.html
@@ -610,13 +610,15 @@ div.tocify {
 <li><p>Make three new stocks: <em>Age 1</em>, <em>Age 2</em> and <em>Age 3</em>.</p></li>
 <li><p>Make a new flow (flow in) called <em>Births</em>. This should represent new <em>Age 1</em> individuals. We will ignore immigration for now, so new additions into the “Age 1” stock is the only way new individuals can be added to the population. We will assume that <em>Age 2</em> and <em>Age 3</em> are the only reproductively active ages. Therefore, draw links from <em>Age 2</em> and <em>Age 3</em> to <em>Births</em>.</p></li>
 <li><p>Make new flows from <em>Age 1 to Age 2</em> and from <em>Age 2 to Age 3</em>, called <em>Transition to Age 2</em> and <em>Transition to Age 3</em>, respectively. These flows represent <strong>growth</strong>, or advancement from <em>Age 1</em> to <em>Age 2</em> and from <em>Age 2</em> to <em>Age 3</em>.</p></li>
-<li><p>Make three new flows representing, emerging respectively from each stock and called <em>Age 1 mortality</em>, <em>Age 2 mortality</em>, and <em>Age 3 mortality</em>.</p></li>
+<li><p>Make three new flows representing mortality, emerging respectively from each stock and called <em>Age 1 mortality</em>, <em>Age 2 mortality</em>, and <em>Age 3 mortality</em>.</p></li>
 </ol>
 <p>Your new insight should look something like this (but the flow into Age 1 can be called ‘Births’ rather than ’Recruitment):</p>
 <p><img src="IM7.jpg" /></p>
 <p>NOTE: you don’t need links from flows to connected stocks (they are already connected so they don’t need a link!)- but you are welcome to add these links if it helps you!</p>
 <ol start="6" style="list-style-type: decimal">
-<li><p>Parameterize your new age-structured population! 6a. For births, make new variables called <em>Birth rate, age 2</em> and <em>Birth rate, age 3</em>, representing the per-capita reproductive rate for age 2 and age 3, respectively. Draw links from these variables to <em>Births</em>, and set these variables at 1.2 and 1.7, respectively. Click on the equation editor for <em>Births</em> and set the equation appropriately (see questions below) 6b. For the transitions, make new variables representing the per-capita transition rates, called <em>Transition rate, Age 1 to 2</em> and <em>Transition rate, Age 2 to 3</em>. Draw links to the appropriate flows, and set these rates at 0.5 and 0.3, respectively. NOTE: these transition rates could also be called “survival rates”<br />
+<li><p>Parameterize your new age-structured population!</p>
+<p>6a. For births, make new variables called <em>Birth rate, age 2</em> and <em>Birth rate, age 3</em>, representing the per-capita reproductive rate for age 2 and age 3, respectively. Draw links from these variables to <em>Births</em>, and set these variables at 1.2 and 1.7, respectively. Click on the equation editor for <em>Births</em> and set the equation appropriately (see questions below)</p>
+<p>6b. For the transitions, make new variables representing the per-capita transition rates, called <em>Transition rate, Age 1 to 2</em> and <em>Transition rate, Age 2 to 3</em>. Draw links to the appropriate flows, and set these rates at 0.5 and 0.3, respectively. NOTE: these transition rates could also be called “survival rates”<br />
 6c. For the mortality rates, note that all individuals in the <em>Age 1</em> stock must either transition to <em>Age 2</em> or die (mortality rates are 1 minus the corresponding transition rate). In addition, all individuals in the <em>Age 3</em> stock must die- there is no <em>Age 4</em> class! Now click on the equation editors for the mortality rates, and specify the mortality rates appropriately.</p></li>
 <li><p>Explore the model- make sure you understand how it works!</p></li>
 </ol>
@@ -634,7 +636,9 @@ div.tocify {
 <p>Try to implement the following model (adding onto the previous age-structured model in InsightMaker). <em>If the total population (all three age classes combined!) exceeds 75 individuals, then reproduction rates drop to 25% of normal rates.</em></p>
 <p>4a. Please provide your full InsightMaker model (copy URL in the appropriate place in Top Hat).</p>
 <p>4b. Change the Age 1 survival rate to 0.7 (i.e., mortality drops to 30%). Run the simulation starting with 75 individuals, all in Age class 1. Describe the resulting population dynamics. Is this a <strong>random (stochastic)</strong> model (different results every time you run the model, even with the same initial conditions)? If so, explain how you determined that this model is random/stochastic. If not, please speculate on why the population fluctuates back and forth!</p>
-<p>##Checklist for Lab 3 completion</p>
+</div>
+<div id="checklist-for-lab-3-completion" class="section level2">
+<h2>Checklist for Lab 3 completion</h2>
 <ul>
 <li>Please type your responses into one Word document and submit <em>using Top Hat</em>!</li>
 </ul>
