--- a/LECTURE6.html
+++ b/LECTURE6.html
@@ -594,8 +594,8 @@ barplot(Death_rate,xlab=&quot;Age&quot;,ylab=&quot;d, per-capita death rate&quot
 <p>The term <span class="math inline">\(l(x)\)</span> represents the <em>proportion of the cohort surviving from age 0 to age x</em>. This is called <strong>survivorship</strong></p>
 <p>The term <span class="math inline">\(g(x)\)</span> represents the <em>proportion surviving from age x to age x+1</em>. This is called <strong>survival rate</strong></p>
 </div>
-<div id="types-of-survivorship-curveys" class="section level3">
-<h3>Types of survivorship curveys…</h3>
+<div id="types-of-survivorship-curves" class="section level3">
+<h3>Types of survivorship curves…</h3>
 <p>There are three main types of survivorship curves (also called survivorship schedules), classified as <strong>Type I</strong>, <strong>Type II</strong>, and <strong>Type III</strong>.</p>
 <p><em>Survivorship curves</em> describe how the logarithm of survivorship (<span class="math inline">\(log(l(x))\)</span>) drops off with age. These three types of <strong>life history</strong> pattern can be illustrated with three real-world examples: humans, songbirds, and frogs.</p>
 <p><strong>Q</strong>: can survivorship increase with age?</p>
